[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora-error = { version = "0.4.0", path = "../pingora-error" }
pingora-core = { version = "0.4.0", path = "../pingora-core", default-features = false }
pingora-cache = { version = "0.4.0", path = "../pingora-cache", default-features = false }
tokio = { workspace = true, features = ["macros", "net"] }
pingora-http = { version = "0.4.0", path = "../pingora-http" }
http = { workspace = true }
futures = "0.3"
bytes = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
h2 = { workspace = true }
once_cell = { workspace = true }
clap = { version = "3.2.25", features = ["derive"] }
regex = "1"
